--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -114,8 +114,9 @@
                         Height="80"
                         hc:BorderElement.CornerRadius="40"
                         Command="{Binding ColorConvertCommand}"
-                        Content="转换"
-                        FontSize="18"
+                        Content="&#xe603;"
+                        FontFamily="/DevKit;component/Fonts/#iconfont"
+                        FontSize="40"
                         Style="{StaticResource ButtonPrimary}" />
 
                     <CheckBox
@@ -140,6 +141,36 @@
                         FontSize="14"
                         Text="{Binding ColorHexValue}" />
 
+                    <Button
+                        Grid.Column="1"
+                        Margin="10,0,0,0"
+                        BorderThickness="0"
+                        Command="{Binding CopyColorHexValueCommand}"
+                        Content="复制"
+                        Style="{StaticResource ButtonSuccess}" />
+                </Grid>
+            </Grid>
+
+            <Grid Grid.Row="1" Margin="0,10">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Border
+                    Grid.Row="0"
+                    Background="{Binding ColorViewBrush}"
+                    CornerRadius="5" />
+
+                <Grid Grid.Row="1" Margin="0,10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Grid.Column="0" Text="{Binding Value, ElementName=AlphaSlider, Converter={StaticResource AlphaValueConverterKey}}" />
+
                     <CheckBox
                         x:Name="AlphaCheckBox"
                         Grid.Column="1"
@@ -148,56 +179,24 @@
                         Content="透明度"
                         IsChecked="{Binding IsAlphaBoxChecked}" />
                 </Grid>
+
+                <Slider
+                    x:Name="AlphaSlider"
+                    Grid.Row="2"
+                    HorizontalAlignment="Stretch"
+                    hc:TipElement.Visibility="Collapsed"
+                    IsEnabled="{Binding ElementName=AlphaCheckBox, Path=IsChecked}"
+                    IsSnapToTickEnabled="True"
+                    Maximum="255"
+                    Minimum="0"
+                    Value="{Binding SliderValue}">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="ValueChanged">
+                            <b:InvokeCommandAction Command="{Binding AlphaValueChangedCommand}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </Slider>
             </Grid>
-
-            <Grid Grid.Row="1" Margin="0,10">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-
-                <Border
-                    Grid.Column="0"
-                    Background="{Binding ColorViewBrush}"
-                    CornerRadius="5" />
-
-                <Grid Grid.Column="1" Margin="10,0,0,0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-
-                    <Slider
-                        x:Name="AlphaSlider"
-                        Grid.Row="0"
-                        HorizontalAlignment="Center"
-                        hc:TipElement.Visibility="Collapsed"
-                        IsEnabled="{Binding ElementName=AlphaCheckBox, Path=IsChecked}"
-                        IsSnapToTickEnabled="True"
-                        Maximum="255"
-                        Minimum="0"
-                        Orientation="Vertical"
-                        Value="{Binding SliderValue}">
-                        <b:Interaction.Triggers>
-                            <b:EventTrigger EventName="ValueChanged">
-                                <b:InvokeCommandAction Command="{Binding AlphaValueChangedCommand}" />
-                            </b:EventTrigger>
-                        </b:Interaction.Triggers>
-                    </Slider>
-
-                    <TextBlock
-                        Grid.Row="1"
-                        Width="38"
-                        Text="{Binding Value, ElementName=AlphaSlider, Converter={StaticResource AlphaValueConverterKey}}" />
-                </Grid>
-            </Grid>
-
-            <Button
-                Grid.Row="2"
-                HorizontalAlignment="Stretch"
-                Command="{Binding CopyColorHexValueCommand}"
-                Content="复制"
-                Style="{StaticResource ButtonSuccess}" />
         </Grid>
 
         <ListBox
