feat(devkit): 优化APK文件管理界面显示
- 在ApkFileModel中新增文件大小、修改时间、构建时间、版本和附加信息属性
- 调整ApplicationPackageView.xaml中的列表项布局，改为网格布局并增加文件信息显示
- 更新列表项样式，调整尺寸和边距以适应新的布局结构
- 在ViewModel中实现APK文件信息解析逻辑，包括文件名处理和正则表达式匹配
- 添加文件大小转换扩展方法，支持B/KB/MB/GB单位自动转换
- 实现APK文件名中日期、版本号和附加信息的提取功能

--- a/DevKit/Views/ApplicationPackageView.xaml
+++ b/DevKit/Views/ApplicationPackageView.xaml
@@ -205,7 +205,7 @@
         <ListBox
             x:Name="TargetListBox"
             Grid.Row="5"
-            Margin="10,0"
+            Margin="5,0,5,10"
             Background="Transparent"
             BorderThickness="0"
             ItemsSource="{Binding ApkFileCollection}"
@@ -214,29 +214,50 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid ToolTip="{Binding FullName}">
-                        <Grid.RowDefinitions>
-                            <RowDefinition />
-                            <RowDefinition />
-                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
 
-                        <Button
-                            Grid.Row="0"
-                            Width="50"
-                            Height="50"
-                            Background="Transparent"
-                            BorderThickness="0"
-                            Command="{Binding DataContext.OpenFileFolderCommand, ElementName=TargetListBox}"
-                            CommandParameter="{Binding FullName}">
-                            <Image Source="/DevKit;component/Images/apk.png" />
-                        </Button>
+                        <StackPanel Grid.Column="0" Orientation="Vertical">
+                            <Button
+                                Width="60"
+                                Height="60"
+                                VerticalAlignment="Top"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Command="{Binding DataContext.OpenFileFolderCommand, ElementName=TargetListBox}"
+                                CommandParameter="{Binding FullName}">
+                                <Image Source="/DevKit;component/Images/apk.png" />
+                            </Button>
 
-                        <TextBlock
-                            Grid.Row="1"
-                            Margin="10,5,10,0"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            FontSize="12"
-                            Text="{Binding FileName}" />
+                            <TextBlock
+                                HorizontalAlignment="Center"
+                                FontSize="12"
+                                Text="{Binding ExtraInfo}" />
+                        </StackPanel>
+
+                        <Grid Grid.Column="1" Margin="0,5,5,5">
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+
+                            <TextBlock
+                                Grid.Row="0"
+                                Text="{Binding FileName}"
+                                TextWrapping="Wrap" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Margin="0,3"
+                                FontSize="12"
+                                Text="{Binding FileSize, StringFormat={}大小：{0}}" />
+                            <TextBlock
+                                Grid.Row="2"
+                                FontSize="12"
+                                Text="{Binding Version, StringFormat={}版本：{0}}" />
+                        </Grid>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
@@ -249,24 +270,23 @@
 
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                    <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                    <Setter Property="Width" Value="193" />
-                    <Setter Property="Height" Value="93" />
-                    <Setter Property="Margin" Value="2" />
+                    <Setter Property="Width" Value="195" />
+                    <Setter Property="Height" Value="95" />
+                    <Setter Property="Margin" Value="2.5" />
+                    <Setter Property="Padding" Value="5" />
                     <Setter Property="Background" Value="White" />
-
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type ListBoxItem}">
                                 <Border
                                     x:Name="ItemContainerBorder"
                                     Margin="{TemplateBinding Margin}"
+                                    Padding="{TemplateBinding Padding}"
                                     Background="{TemplateBinding Background}"
                                     BorderBrush="{DynamicResource DevKitBorderBrush}"
                                     BorderThickness="1"
                                     CornerRadius="5">
-                                    <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
+                                    <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                                 </Border>
                             </ControlTemplate>
                         </Setter.Value>
