--- a/DevKit/Dialogs/ScreenShotListDialog.xaml
+++ b/DevKit/Dialogs/ScreenShotListDialog.xaml
@@ -2,12 +2,11 @@
     x:Class="DevKit.Dialogs.ScreenShotListDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:cvt="clr-namespace:DevKit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
-    Width="605"
+    Width="650"
     Height="400"
     d:DataContext="{d:DesignInstance Type=vm:ScreenShotListDialogViewModel}"
     Background="{DynamicResource DevKitBackgroundBrush}"
@@ -26,8 +25,6 @@
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="14" />
         </Style>
-
-        <cvt:ButtonVisibilityConverter x:Key="ButtonVisibilityConverterKey" />
     </UserControl.Resources>
 
     <Grid>
@@ -53,7 +50,47 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
-                        <TextBlock Text="{Binding FilePath}" TextWrapping="Wrap" />
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock
+                            Grid.Column="0"
+                            Text="{Binding FilePath}"
+                            TextWrapping="Wrap" />
+
+                        <Button
+                            Grid.Column="1"
+                            Margin="5,0,0,0"
+                            Command="{Binding DataContext.DeleteScreenshotCommand, ElementName=ScreenshotsListBox}"
+                            CommandParameter="{Binding Path=SelectedItem, ElementName=ScreenshotsListBox}"
+                            Content="&#xe692;"
+                            FontFamily="/DevKit;component/Fonts/#iconfont"
+                            Foreground="White">
+                            <Button.Style>
+                                <Style TargetType="Button">
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="Button">
+                                                <Border
+                                                    x:Name="ButtonContainerBorder"
+                                                    Padding="2"
+                                                    CornerRadius="8">
+                                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                                </Border>
+
+                                                <ControlTemplate.Triggers>
+                                                    <Trigger Property="IsMouseOver" Value="True">
+                                                        <Setter TargetName="ButtonContainerBorder" Property="Background" Value="Red" />
+                                                    </Trigger>
+                                                </ControlTemplate.Triggers>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </Button.Style>
+                        </Button>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
@@ -64,11 +101,41 @@
                     <WrapPanel Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
+
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="Margin" Value="1" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <Border
+                                    x:Name="ItemContainerBorder"
+                                    Padding="5"
+                                    BorderBrush="#F1F1F1"
+                                    BorderThickness="1"
+                                    CornerRadius="3">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                </Border>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter TargetName="ItemContainerBorder" Property="Background" Value="#F8F8F8" />
+                                        <Setter Property="TextBlock.Foreground" Value="{StaticResource PrimaryBrush}" />
+                                    </Trigger>
+
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter TargetName="ItemContainerBorder" Property="Background" Value="#E7F4FF" />
+                                        <Setter TargetName="ItemContainerBorder" Property="TextBlock.Foreground" Value="{StaticResource PrimaryBrush}" />
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.ItemContainerStyle>
         </ListBox>
 
         <Grid Grid.Row="2" Margin="10">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
@@ -82,16 +149,6 @@
 
             <Button
                 Grid.Column="1"
-                Margin="10,0"
-                HorizontalAlignment="Left"
-                Command="{Binding DeleteScreenshotCommand}"
-                CommandParameter="{Binding ElementName=ScreenshotsListBox, Path=SelectedItem}"
-                Content="删除"
-                Style="{StaticResource ButtonDanger}"
-                Visibility="{Binding Screenshots.Count, Converter={StaticResource ButtonVisibilityConverterKey}}" />
-
-            <Button
-                Grid.Column="2"
                 HorizontalAlignment="Right"
                 Command="{Binding OutputScreenshotCommand}"
                 CommandParameter="{Binding ElementName=ScreenshotsListBox, Path=SelectedItem}"
