--- a/DevKit/Dialogs/ScreenShotListDialog.xaml
+++ b/DevKit/Dialogs/ScreenShotListDialog.xaml
@@ -3,10 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
-    Width="650"
+    Width="235"
     Height="400"
     d:DataContext="{d:DesignInstance Type=vm:ScreenShotListDialogViewModel}"
     Background="{DynamicResource DevKitBackgroundBrush}"
@@ -47,6 +48,12 @@
             BorderBrush="{DynamicResource DevKitBorderBrush}"
             ItemsSource="{Binding Screenshots}"
             ScrollViewer.CanContentScroll="False">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction Command="{Binding ItemDoubleClickedCommand}" CommandParameter="{Binding SelectedItem, ElementName=ScreenshotsListBox}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -95,13 +102,6 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
 
-            <!--  ListBox横排  -->
-            <ListBox.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel Orientation="Horizontal" />
-                </ItemsPanelTemplate>
-            </ListBox.ItemsPanel>
-
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <Setter Property="Margin" Value="1" />
@@ -110,7 +110,7 @@
                             <ControlTemplate TargetType="{x:Type ListBoxItem}">
                                 <Border
                                     x:Name="ItemContainerBorder"
-                                    Padding="5"
+                                    Padding="5,10"
                                     BorderBrush="#F1F1F1"
                                     BorderThickness="1"
                                     CornerRadius="3">
@@ -134,26 +134,24 @@
             </ListBox.ItemContainerStyle>
         </ListBox>
 
-        <Grid Grid.Row="2" Margin="10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-
+        <UniformGrid
+            Grid.Row="2"
+            Margin="10"
+            Rows="1">
             <Button
-                Grid.Column="0"
-                HorizontalAlignment="Left"
+                Margin="0,0,5,0"
+                HorizontalAlignment="Stretch"
                 Command="{Binding SortScreenshotsCommand}"
                 Content="排序"
                 Style="{StaticResource ButtonInfo}" />
 
             <Button
-                Grid.Column="1"
-                HorizontalAlignment="Right"
+                Margin="5,0,0,0"
+                HorizontalAlignment="Stretch"
                 Command="{Binding OutputScreenshotCommand}"
                 CommandParameter="{Binding ElementName=ScreenshotsListBox, Path=SelectedItem}"
                 Content="导出到电脑"
                 Style="{StaticResource ButtonPrimary}" />
-        </Grid>
+        </UniformGrid>
     </Grid>
 </UserControl>
