refactor(ColorResourceView):重构颜色转换界面布局和命令处理
- 移除原有的颜色转换按钮和 HEX 复选框
- 添加 RGB 转 HEX 和透明度复选框到新位置
- 调整滑块控件布局，将其移动到与透明度复选框同一网格行
-从 ViewModel 中移除 ColorConvertCommand 相关代码
- 在 ColorConvert 方法上添加 TODO 注释标记拆分输入事件监听
- 更新界面元素的网格行索引以适应新的布局结构

--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -109,26 +109,6 @@
                 </UniformGrid>
 
                 <Grid Grid.Row="4">
-                    <Button
-                        Width="80"
-                        Height="80"
-                        hc:BorderElement.CornerRadius="40"
-                        Command="{Binding ColorConvertCommand}"
-                        Content="&#xe603;"
-                        FontFamily="/DevKit;component/Fonts/#iconfont"
-                        FontSize="40"
-                        Style="{StaticResource ButtonPrimary}" />
-
-                    <CheckBox
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Bottom"
-                        BorderBrush="{DynamicResource DevKitBorderBrush}"
-                        Content="HEX"
-                        IsChecked="{Binding IsHexBoxChecked}" />
-                </Grid>
-
-
-                <Grid Grid.Row="5" Margin="0,10,0,0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
                         <ColumnDefinition Width="Auto" />
@@ -149,6 +129,20 @@
                         Content="复制"
                         Style="{StaticResource ButtonSuccess}" />
                 </Grid>
+
+                <Grid Grid.Row="5" Margin="0,10,0,0">
+                    <CheckBox
+                        BorderBrush="{DynamicResource DevKitBorderBrush}"
+                        Content="RGB转HEX"
+                        IsChecked="{Binding IsHexBoxChecked}" />
+
+                    <CheckBox
+                        x:Name="AlphaCheckBox"
+                        HorizontalAlignment="Right"
+                        BorderBrush="{DynamicResource DevKitBorderBrush}"
+                        Content="透明度"
+                        IsChecked="{Binding IsAlphaBoxChecked}" />
+                </Grid>
             </Grid>
 
             <Grid Grid.Row="1" Margin="0,10">
@@ -163,39 +157,32 @@
                     Background="{Binding ColorViewBrush}"
                     CornerRadius="5" />
 
-                <Grid Grid.Row="1" Margin="0,10">
+                <Grid Grid.Row="1" Margin="0,10,0,0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
                         <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition />
                     </Grid.ColumnDefinitions>
 
                     <TextBlock Grid.Column="0" Text="{Binding Value, ElementName=AlphaSlider, Converter={StaticResource AlphaValueConverterKey}}" />
 
-                    <CheckBox
-                        x:Name="AlphaCheckBox"
+                    <Slider
+                        x:Name="AlphaSlider"
                         Grid.Column="1"
                         Margin="10,0,0,0"
-                        BorderBrush="{DynamicResource DevKitBorderBrush}"
-                        Content="透明度"
-                        IsChecked="{Binding IsAlphaBoxChecked}" />
+                        HorizontalAlignment="Stretch"
+                        hc:TipElement.Visibility="Collapsed"
+                        IsEnabled="{Binding ElementName=AlphaCheckBox, Path=IsChecked}"
+                        IsSnapToTickEnabled="True"
+                        Maximum="255"
+                        Minimum="0"
+                        Value="{Binding SliderValue}">
+                        <b:Interaction.Triggers>
+                            <b:EventTrigger EventName="ValueChanged">
+                                <b:InvokeCommandAction Command="{Binding AlphaValueChangedCommand}" />
+                            </b:EventTrigger>
+                        </b:Interaction.Triggers>
+                    </Slider>
                 </Grid>
-
-                <Slider
-                    x:Name="AlphaSlider"
-                    Grid.Row="2"
-                    HorizontalAlignment="Stretch"
-                    hc:TipElement.Visibility="Collapsed"
-                    IsEnabled="{Binding ElementName=AlphaCheckBox, Path=IsChecked}"
-                    IsSnapToTickEnabled="True"
-                    Maximum="255"
-                    Minimum="0"
-                    Value="{Binding SliderValue}">
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="ValueChanged">
-                            <b:InvokeCommandAction Command="{Binding AlphaValueChangedCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </Slider>
             </Grid>
         </Grid>
 
