--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -6,6 +6,7 @@
     xmlns:cvt="clr-namespace:DevKit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:utils="clr-namespace:DevKit.Utils"
@@ -59,6 +60,7 @@
                         HorizontalContentAlignment="Center"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         FontSize="14"
+                        IsEnabled="{Binding ElementName=ConvertHexCheckBox, Path=IsChecked}"
                         MaxLength="3"
                         Text="{Binding RedColor}" />
                 </UniformGrid>
@@ -75,6 +77,7 @@
                         HorizontalContentAlignment="Center"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         FontSize="14"
+                        IsEnabled="{Binding ElementName=ConvertHexCheckBox, Path=IsChecked}"
                         MaxLength="3"
                         Text="{Binding GreenColor}" />
                 </UniformGrid>
@@ -88,6 +91,7 @@
                         HorizontalContentAlignment="Center"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         FontSize="14"
+                        IsEnabled="{Binding ElementName=ConvertHexCheckBox, Path=IsChecked}"
                         MaxLength="3"
                         Text="{Binding BlueColor}" />
                 </UniformGrid>
@@ -104,6 +108,7 @@
                         HorizontalContentAlignment="Center"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         FontSize="14"
+                        IsEnabled="{Binding ElementName=ConvertHexCheckBox, Path=IsChecked}"
                         MaxLength="3"
                         Text="{Binding AlphaValue}" />
                 </UniformGrid>
@@ -114,11 +119,13 @@
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <TextBox
+                    <hc:TextBox
                         Grid.Column="0"
                         HorizontalAlignment="Stretch"
+                        hc:InfoElement.ShowClearButton="True"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         FontSize="14"
+                        IsEnabled="{Binding IsHexInputEnabled}"
                         Text="{Binding ColorHexValue}" />
 
                     <Button
@@ -132,9 +139,20 @@
 
                 <Grid Grid.Row="5" Margin="0,10,0,0">
                     <CheckBox
+                        x:Name="ConvertHexCheckBox"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         Content="RGB转HEX"
-                        IsChecked="{Binding IsHexBoxChecked}" />
+                        IsChecked="True">
+                        <i:Interaction.Triggers>
+                            <b:EventTrigger EventName="Checked">
+                                <b:InvokeCommandAction Command="{Binding HexCheckBoxCheckedCommand}" />
+                            </b:EventTrigger>
+
+                            <b:EventTrigger EventName="Unchecked">
+                                <b:InvokeCommandAction Command="{Binding HexCheckBoxUncheckedCommand}" />
+                            </b:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </CheckBox>
 
                     <CheckBox
                         x:Name="AlphaCheckBox"
