feat(color): 添加颜色选择器透明度切换功能
- 在颜色资源视图中为透明度复选框添加命令绑定
- 移除旧的 IsAlphaBoxChecked 属性并添加新的命令处理逻辑
- 实现 AlphaCheckBoxChecked 和 AlphaCheckBoxUnchecked 方法来处理透明度切换
- 更新颜色转换逻辑以支持透明度动态显示
- 修改颜色复制功能以统一使用十六进制颜色值格式
- 添加交互触发器来响应复选框状态变化

--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -159,7 +159,17 @@
                         HorizontalAlignment="Right"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         Content="透明度"
-                        IsChecked="{Binding IsAlphaBoxChecked}" />
+                        IsChecked="True" >
+                        <i:Interaction.Triggers>
+                            <b:EventTrigger EventName="Checked">
+                                <b:InvokeCommandAction Command="{Binding AlphaCheckBoxCheckedCommand}" />
+                            </b:EventTrigger>
+
+                            <b:EventTrigger EventName="Unchecked">
+                                <b:InvokeCommandAction Command="{Binding AlphaCheckBoxUncheckedCommand}" />
+                            </b:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </CheckBox>
                 </Grid>
             </Grid>
 
