--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -120,13 +120,20 @@
                     </Grid.ColumnDefinitions>
 
                     <hc:TextBox
+                        x:Name="ColorHexTextBox"
                         Grid.Column="0"
                         HorizontalAlignment="Stretch"
-                        hc:InfoElement.ShowClearButton="True"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         FontSize="14"
                         IsEnabled="{Binding IsHexInputEnabled}"
-                        Text="{Binding ColorHexValue}" />
+                        MaxLength="9"
+                        Text="{Binding ColorHexValue}">
+                        <i:Interaction.Triggers>
+                            <b:EventTrigger EventName="TextChanged">
+                                <b:InvokeCommandAction Command="{Binding HexTextChangedCommand}" CommandParameter="{Binding ElementName=ColorHexTextBox, Path=Text}" />
+                            </b:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </hc:TextBox>
 
                     <Button
                         Grid.Column="1"
@@ -159,7 +166,7 @@
                         HorizontalAlignment="Right"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         Content="透明度"
-                        IsChecked="True" >
+                        IsChecked="True">
                         <i:Interaction.Triggers>
                             <b:EventTrigger EventName="Checked">
                                 <b:InvokeCommandAction Command="{Binding AlphaCheckBoxCheckedCommand}" />
