refactor(behaviors): 将行为类从Utils目录移动到Behaviors目录并优化颜色资源视图
- 将AutoScrollToBottomBehavior和ListBoxItemMarginBehavior从Utils目录移动到Behaviors目录
- 在ColorResourceView.xaml中为颜色输入框添加数值范围限制行为
- 为颜色输入框添加文本变化事件触发命令执行功能
- 更新项目文件中的引用路径和命名空间引用
- 修复颜色转换逻辑并重命名相关命令属性
- 在各个视图文件中更新行为类的命名空间引用

--- a/DevKit/Views/WebSocketServerView.xaml
+++ b/DevKit/Views/WebSocketServerView.xaml
@@ -3,13 +3,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:bhv="clr-namespace:DevKit.Behaviors"
     xmlns:cvt="clr-namespace:DevKit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:model="clr-namespace:DevKit.Models"
     xmlns:prism="http://prismlibrary.com/"
-    xmlns:utils="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
     Width="800"
     Height="600"
@@ -198,7 +198,7 @@
 
                 <!--  自动滑动到最底部  -->
                 <b:Interaction.Behaviors>
-                    <utils:AutoScrollToBottomBehavior />
+                    <bhv:AutoScrollToBottomBehavior />
                 </b:Interaction.Behaviors>
 
                 <ListBox.ItemContainerStyle>
@@ -291,7 +291,7 @@
 
                     <!--  自动滑动到最底部  -->
                     <b:Interaction.Behaviors>
-                        <utils:AutoScrollToBottomBehavior />
+                        <bhv:AutoScrollToBottomBehavior />
                     </b:Interaction.Behaviors>
 
                     <ListBox.ContextMenu>
