--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -3,13 +3,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:bhv="clr-namespace:DevKit.Behaviors"
     xmlns:cvt="clr-namespace:DevKit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
-    xmlns:utils="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
     Width="800"
     Height="600"
@@ -57,12 +57,23 @@
                     </Border>
 
                     <TextBox
+                        x:Name="RedColorTextBox"
                         HorizontalContentAlignment="Center"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         FontSize="14"
                         IsEnabled="{Binding ElementName=ConvertHexCheckBox, Path=IsChecked}"
                         MaxLength="3"
-                        Text="{Binding RedColor}" />
+                        Text="{Binding RedColor}">
+                        <i:Interaction.Behaviors>
+                            <bhv:NumericRangeBehavior MaxValue="255" MinValue="0" />
+                        </i:Interaction.Behaviors>
+
+                        <i:Interaction.Triggers>
+                            <b:EventTrigger EventName="TextChanged">
+                                <b:InvokeCommandAction Command="{Binding RedColorTextChangedCommand}" CommandParameter="{Binding ElementName=RedColorTextBox, Path=Text}" />
+                            </b:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </TextBox>
                 </UniformGrid>
 
                 <UniformGrid
@@ -74,12 +85,23 @@
                     </Border>
 
                     <TextBox
+                        x:Name="GreenColorTextBox"
                         HorizontalContentAlignment="Center"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         FontSize="14"
                         IsEnabled="{Binding ElementName=ConvertHexCheckBox, Path=IsChecked}"
                         MaxLength="3"
-                        Text="{Binding GreenColor}" />
+                        Text="{Binding GreenColor}">
+                        <i:Interaction.Behaviors>
+                            <bhv:NumericRangeBehavior MaxValue="255" MinValue="0" />
+                        </i:Interaction.Behaviors>
+
+                        <i:Interaction.Triggers>
+                            <b:EventTrigger EventName="TextChanged">
+                                <b:InvokeCommandAction Command="{Binding GreenColorTextChangedCommand}" CommandParameter="{Binding ElementName=GreenColorTextBox, Path=Text}" />
+                            </b:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </TextBox>
                 </UniformGrid>
 
                 <UniformGrid Grid.Row="2" Rows="1">
@@ -88,12 +110,23 @@
                     </Border>
 
                     <TextBox
+                        x:Name="BlueColorTextBox"
                         HorizontalContentAlignment="Center"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         FontSize="14"
                         IsEnabled="{Binding ElementName=ConvertHexCheckBox, Path=IsChecked}"
                         MaxLength="3"
-                        Text="{Binding BlueColor}" />
+                        Text="{Binding BlueColor}">
+                        <i:Interaction.Behaviors>
+                            <bhv:NumericRangeBehavior MaxValue="255" MinValue="0" />
+                        </i:Interaction.Behaviors>
+
+                        <i:Interaction.Triggers>
+                            <b:EventTrigger EventName="TextChanged">
+                                <b:InvokeCommandAction Command="{Binding BlueColorTextChangedCommand}" CommandParameter="{Binding ElementName=BlueColorTextBox, Path=Text}" />
+                            </b:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </TextBox>
                 </UniformGrid>
 
                 <UniformGrid
@@ -105,12 +138,23 @@
                     </Border>
 
                     <TextBox
+                        x:Name="AlphaColorTextBox"
                         HorizontalContentAlignment="Center"
                         BorderBrush="{DynamicResource DevKitBorderBrush}"
                         FontSize="14"
                         IsEnabled="{Binding ElementName=ConvertHexCheckBox, Path=IsChecked}"
                         MaxLength="3"
-                        Text="{Binding AlphaValue}" />
+                        Text="{Binding AlphaValue}">
+                        <i:Interaction.Behaviors>
+                            <bhv:NumericRangeBehavior MaxValue="255" MinValue="0" />
+                        </i:Interaction.Behaviors>
+
+                        <i:Interaction.Triggers>
+                            <b:EventTrigger EventName="TextChanged">
+                                <b:InvokeCommandAction Command="{Binding AlphaColorTextChangedCommand}" CommandParameter="{Binding ElementName=AlphaColorTextBox, Path=Text}" />
+                            </b:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </TextBox>
                 </UniformGrid>
 
                 <Grid Grid.Row="4">
@@ -119,7 +163,7 @@
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <hc:TextBox
+                    <TextBox
                         x:Name="ColorHexTextBox"
                         Grid.Column="0"
                         HorizontalAlignment="Stretch"
@@ -130,10 +174,10 @@
                         Text="{Binding ColorHexValue}">
                         <i:Interaction.Triggers>
                             <b:EventTrigger EventName="TextChanged">
-                                <b:InvokeCommandAction Command="{Binding HexTextChangedCommand}" CommandParameter="{Binding ElementName=ColorHexTextBox, Path=Text}" />
+                                <b:InvokeCommandAction Command="{Binding ColorHexTextChangedCommand}" CommandParameter="{Binding ElementName=ColorHexTextBox, Path=Text}" />
                             </b:EventTrigger>
                         </i:Interaction.Triggers>
-                    </hc:TextBox>
+                    </TextBox>
 
                     <Button
                         Grid.Column="1"
@@ -270,7 +314,7 @@
 
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
-                    <Setter Property="utils:ListBoxItemMarginBehavior.ApplyCustomMargin" Value="True" />
+                    <Setter Property="bhv:ListBoxItemMarginBehavior.ApplyCustomMargin" Value="True" />
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type ListBoxItem}">
