--- a/DevKit/Views/MainWindow.xaml
+++ b/DevKit/Views/MainWindow.xaml
@@ -2,10 +2,10 @@
     x:Class="DevKit.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:bhv="clr-namespace:DevKit.Behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:utils="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
     Title="DevKit（开发者工具集）"
     Width="412"
@@ -23,7 +23,7 @@
             <Setter Property="Width" Value="114" />
             <Setter Property="Height" Value="80" />
             <Setter Property="Background" Value="White" />
-            <Setter Property="utils:ListBoxItemMarginBehavior.ApplyCustomMargin" Value="True" />
+            <Setter Property="bhv:ListBoxItemMarginBehavior.ApplyCustomMargin" Value="True" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ListBoxItem}">
