--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -6,7 +6,6 @@
     xmlns:bhv="clr-namespace:DevKit.Behaviors"
     xmlns:cvt="clr-namespace:DevKit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
@@ -225,44 +224,15 @@
                 </Grid>
             </Grid>
 
-            <Grid Grid.Row="1" Margin="0,10">
-                <Grid.RowDefinitions>
-                    <RowDefinition />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
+            <Grid Grid.Row="1" Margin="0,10,0,0">
+                <Border Background="{Binding ColorViewBrush}" CornerRadius="5" />
 
-                <Border
-                    Grid.Row="0"
-                    Background="{Binding ColorViewBrush}"
-                    CornerRadius="5" />
-
-                <Grid Grid.Row="1" Margin="0,10,0,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-
-                    <TextBlock Grid.Column="0" Text="{Binding Value, ElementName=AlphaSlider, Converter={StaticResource AlphaValueConverterKey}}" />
-
-                    <Slider
-                        x:Name="AlphaSlider"
-                        Grid.Column="1"
-                        Margin="10,0,0,0"
-                        HorizontalAlignment="Stretch"
-                        hc:TipElement.Visibility="Collapsed"
-                        IsEnabled="{Binding ElementName=AlphaCheckBox, Path=IsChecked}"
-                        IsSnapToTickEnabled="True"
-                        Maximum="255"
-                        Minimum="0"
-                        Value="{Binding SliderValue}">
-                        <b:Interaction.Triggers>
-                            <b:EventTrigger EventName="ValueChanged">
-                                <b:InvokeCommandAction Command="{Binding AlphaValueChangedCommand}" />
-                            </b:EventTrigger>
-                        </b:Interaction.Triggers>
-                    </Slider>
-                </Grid>
+                <TextBlock
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontFamily="宋体"
+                    FontSize="48"
+                    Text="{Binding ElementName=AlphaColorTextBox, Path=Text, Converter={StaticResource AlphaValueConverterKey}}" />
             </Grid>
         </Grid>
 
